--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div>
         <header id="header-bg">
-            <nav>
+            <nav class="nav">
                 <a href="" id="logo">Head Start School</a>
                 <ul id="nav-links">
                     <li class="nav-item"> <a href=""></a>About HSS</li>
