changes to the footer

--- a/index.html
+++ b/index.html
@@ -122,10 +122,11 @@
             <div class="container">
                 <p class="school-name">Head Start School</p>
                 <nav class="nav-links">
-                    <a href="#">Home</a>
-                    <a href="#">About</a>
-                    <a href="#">Programs</a>
-                    <a href="#">Contact</a>
+                    <a href="#">About HSS</a>
+                    <a href="#">Admissions</a>
+                    <a href="#">Academics</a>
+                    <a href="#">Parents/Students</a>
+                    <a href="#">Giving</a>
                 </nav>
                 <p class="copywrite">&copy; 2024 Head Start School. All rights reserved.</p>
             </div>
