--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <div>
         <header id="header-bg">
             <nav class="nav">
-                <a href="" id="logo">Head Start School</a>
+                <img src="./images/Black and Blue Circle Homeschool Logo_20240618_133329_0000.png" alt="">
+                <a href="" class="logo">HeadStart <span id="sch">School</span></a>
                 <ul id="nav-links">
-                    <li class="nav-item"> <a href=""></a>About HSS</li>
-                    <li class="nav-item"> <a href=""></a>Admissions</li>
-                    <li class="nav-item"> <a href=""></a>Academics</li>
-                    <li class="nav-item"> <a href=""></a>Parents/Students</li>
-                    <li class="nav-item"> <a href=""></a>Giving</li>
+                    <li class="nav-item"><a href="">About HSS</a></li>
+                    <li class="nav-item"><a href="">Admissions</a></li>
+                    <li class="nav-item"><a href="">Academics</a></li>
+                    <li class="nav-item"><a href="">Parents/Students</a></li>
+                    <li class="nav-item"><a href="">Giving</a></li>
                 </ul>
             </nav>
 
